corrected share icon being cutoff and not showing menu on mobile

--- a/packages/augur-ui/src/modules/market-cards/common.styles.less
+++ b/packages/augur-ui/src/modules/market-cards/common.styles.less
@@ -805,17 +805,18 @@
 		}
 
 		> div[class*='DotSelection'] {
+			height: @size-18;
+			width: @size-18;
 
 			@media @breakpoint-mobile-tablet {
 				grid-column: 4;
 			}
 
 			> button > svg {
-				height: @size-18;
-				width: @size-18;
 				fill: var(--color-inactive-text);
 				stroke: none;
 			}
+
 			> div {
 				border: 0;
 				box-shadow: 0 0 @size-4 var(--color-primary-text-15);
@@ -862,7 +863,6 @@
 			display: flex;
 			flex-flow: row nowrap;
 			text-overflow: ellipsis;
-			overflow: hidden;
 
 			> div[class*="CategoryTrail"] {
 				flex: 1;
